--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,19 @@ blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+dnspython==2.7.0
+email_validator==2.2.0
 Flask==3.0.3
+Flask-Login==0.6.3
 Flask-WTF==1.2.1
+gitdb==4.0.11
+GitPython==3.1.43
 idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 requests==2.32.3
+smmap==5.0.1
 urllib3==2.2.2
 watchdog==4.0.2
 Werkzeug==3.0.3
