--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,21 +17,17 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -56,4 +52,13 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          python -m pytest --cov --cov-report=xml
+          python -m pytest --cov --cov-report=html:reports/test-${{ matrix.python-version }}
+
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: reports/test-${{ matrix.python-version }}
+          retention-days: 30
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
