hotfix: hiding secret_key

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,17 +13,20 @@ gitdb==4.0.11
 gitflow==0.5.1
 GitPython==3.1.43
 idna==3.8
+importlib_resources==6.4.5
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mccabe==0.7.0
 packaging==24.1
+passlib==1.7.4
 pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 pytest==8.3.3
 pytest-cov==6.0.0
+python-dotenv==1.0.1
 requests==2.32.3
 smmap==5.0.1
 urllib3==2.2.2
