--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 flake8==7.1.1
 Flask==3.0.3
+flask-cors==6.0.2
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
