--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ Flask==3.0.3
 flask-cors==6.0.2
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 gitdb==4.0.11
 gitflow==0.5.1
@@ -34,6 +35,7 @@ pytest-cov==6.0.0
 python-dotenv==1.0.1
 requests==2.32.3
 smmap==5.0.1
+SQLAlchemy==2.0.45
 urllib3==2.2.2
 watchdog==4.0.2
 Werkzeug==3.0.3
